added/changed assets

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 </head>
 <body>
   <canvas></canvas>
-  <script src="./index.js"></script>
-  <!-- <script src="./src/resources.js"></script> -->
+  <script type="module" src="./index.js"></script>
 </body>
 </html>
