--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   </style>
 </head>
 <body>
-  <canvas></canvas>
+  <div class="canvas-container">
+    <canvas></canvas>
+  </div>
   <script type="module" src="./index.js"></script>
 </body>
 </html>
