created player sprite and designated frames for movement. There's an issue with data loading. Will address next sesh before working on movement.

--- a/index.html
+++ b/index.html
@@ -3,18 +3,36 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./styles/styles.css">
   <title>Genus</title>
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-      image-rendering: pixelated;
-    }
-  </style>
 </head>
 <body>
+  <div class="player-info-container">
+    <div class="player-slots">
+      <div class="necklace slot">X</div>
+      <div class="helmet slot">X</div>
+      <div class="player-lvl slot lvl">lvl</div>
+      <div class="weapon slot">X</div>
+      <div class="chest slot">X</div>
+      <div class="shield slot">X</div>
+      <div class="player-mglvl slot lvl">mlvl</div>
+      <div class="pants slot">X</div>
+      <div class="shoes slot">X</div>
+    </div>
+    <div class="player-inventory">
+      <div class="inventory-1 slot"></div>
+      <div class="inventory-2 slot"></div>
+      <div class="inventory-3 slot"></div>
+      <div class="inventory-4 slot"></div>
+      <div class="inventory-5 slot"></div>
+      <div class="inventory-6 slot"></div>
+    </div>
+  </div>
+  <div class="radar-container">
+    <div class="enemy-list">
+      
+    </div>
+  </div>
   <div class="canvas-container">
     <canvas></canvas>
   </div>
