Ok... well... I've pivoted away from map generation and player validation toward implementing a backend in order to read and write to json data. My first goal will be to run a server and POST data to a json file

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,8 @@
   <title>Genus</title>
 </head>
 <body>
-  <div class="player-info-container">
+  <form action="login"></form>
+  <!-- <div class="player-info-container">
     <div class="player-slots">
       <div class="necklace slot">X</div>
       <div class="helmet slot">X</div>
@@ -32,7 +33,7 @@
     <div class="enemy-list">
       
     </div>
-  </div>
+  </div> -->
   <div class="canvas-container">
     <canvas></canvas>
   </div>
