--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
   <title>Genus</title>
 </head>
 <body>
-  <form action="login"></form>
+  <form id="login" action="login">
+    <label for="input">Name:</label>
+    <input type="text" name="input" id="input" required>
+    <button type="submit"></button>
+  </form>
   <!-- <div class="player-info-container">
     <div class="player-slots">
       <div class="necklace slot">X</div>
