--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
   <title>Genus</title>
 </head>
 <body>
-  <form id="login" action="login">
-    <label for="input">Name:</label>
-    <input type="text" name="input" id="input" required>
-    <button type="submit"></button>
-  </form>
+  <div class="form-container">
+    <form id="login-form" action="login">
+      <label for="login-form-input">player:</label>
+      <input id="login-form-input" type="text" name="login-form-input" required>
+      <button id="login-form-btn" type="submit">submit</button>
+    </form>
+  </div>
   <!-- <div class="player-info-container">
     <div class="player-slots">
       <div class="necklace slot">X</div>
