working on drawing map function

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="form-container">
     <form id="login-form" action="login">
-      <label for="login-form-input">player:</label>
+      <label for="login-form-input">name:</label>
       <input id="login-form-input" type="text" name="login-form-input" required>
       <button id="login-form-btn" type="submit">submit</button>
     </form>
