items can only be dragged and dropped only if they are within reac h of the player

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
       <section id="item-info"></section>
     </div>
     
+    <div id="error-message-box"></div>
+
     <canvas></canvas>
   
     <!-- <div class="interface-container">
