working on the map contents functionality

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Genus</title>
 </head>
 <body>
+  <dix id="overlay"></dix>
   <div class="form-container">
     <form id="login-form" action="login">
       <label for="login-form-input">name:</label>
